Update CSS for PersonalToolbar to ensure visibility when not collapsed

--- a/src/browser/base/content/zen-styles/zen-single-components.css
+++ b/src/browser/base/content/zen-styles/zen-single-components.css
@@ -71,6 +71,6 @@ body > #confetti {
 }
 
 /* Bookmarks */
-#PersonalToolbar {
+#PersonalToolbar:not([collapsed='true']) {
   min-height: 30px;
 }
